--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -55,7 +55,7 @@
     <!-- NEW NAVBAR -->
 
     <!-- HERO SECTION -->
-    <section class="hero">
+    <!-- <section class="hero">
       <div>
         <h1 class="animate__animated animate__backInDown">
           Automatizá tus videos.
@@ -68,11 +68,11 @@
       <a href="/index" class="animate__animated animate__bounce"
         >Prueba ClipgenAI</a
       >
-    </section>
+    </section> -->
     <!-- HERO SECTION -->
 
     <!-- BENEFITS SECTION -->
-    <section class="benefits">
+    <!-- <section class="benefits">
       <p>Lorem ipsum dolor sit amet.</p>
       <span
         >Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
@@ -103,7 +103,7 @@
           </p>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- BENEFITS SECTION -->
 
     <!-- LOGIN SECTION -->
